--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 *:before {
 	padding: 0;
 	margin: 0;
+	outline: none;
 	font-family: "Roboto";
 	font-size: 18px;
 	-webkit-box-sizing: border-box;
@@ -54,7 +55,7 @@ html {
 	display: flex;
 	width: 46%;
 	justify-content: center;
-/* 	align-items: center; */
+	/* 	align-items: center; */
 	flex-direction: column;
 	position: relative;
 	text-align: left;
@@ -64,7 +65,7 @@ html {
 	color: #343434;
 	margin: 0;
 	left: 0;
-/* 	position: absolute; */
+	/* 	position: absolute; */
 	font-family: Montserrat;
 	font-size: 1.333em;
 	letter-spacing: 0em;
